--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -24,14 +24,14 @@ jobs:
 
       - name: Docker Login
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USER }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_TOKEN }}
+          DOCKER_USERNAME: ${{ secrets.GHCR_USER }}
+          DOCKER_PASSWORD: ${{ secrets.GHCR_TOKEN }}
         run: |-
-          docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
+          docker login ghcr.io -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
 
       - name: Run Crossbuild
         run: |-
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t "homelabs/synapse:latest" \
-            -t "homelabs/synapse:$(date '+%Y%m%d%H%M')" --push .
+            -t "ghcr.io/homelab-library/synapse:latest" \
+            -t "ghcr.io/homelab-library/synapse:$(date '+%Y%m%d%H%M')" --push .
